Increased truncateLimit to 17 (odd for centered active page), fixed margin styles clashing with user search bar

--- a/css/app.css
+++ b/css/app.css
@@ -20,6 +20,11 @@ body {
   color: #444 !important;
 }
 
+.pagination {
+  margin-top: 0;
+  margin-bottom: 20px !important;
+}
+
 .table .actions {
   text-align: right;
   padding-right: 10px;
